--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,4 +1,13 @@
 .button-style {
-  border: 1px solid gray;
-  padding: 10px;
+  background-color: #282c34;
+  border: 2px solid #fff;
+  padding: 0.75em;
+  border-radius: 0.25em;
+  box-shadow: 0.4rem 0.4rem 0 #222;
+}
+
+.button-style:hover {
+  box-shadow: 0.25rem 0.25rem 0 #222;
+  transition: all 0.4s ease 0s;
+  background-color: #62625f;
 }
